--- a/khan-internship/index.html
+++ b/khan-internship/index.html
@@ -30,15 +30,14 @@
             </div>
 
             <p>
-            I spent the past summer working on the mobile team at Khan Academy.
+            I spent the past summer working on the iOS team at Khan Academy.
             This post is a recap of some of the things I worked on during my
             internship.
             </p>
 
             <p>
-            Some background first: Khan Academy is a non-profit with a mission
-            of providing a free world-class education for anyone anywhere. It's
-            best known for the videos, but there are hundreds of interactive
+            Khan Academy is
+            best known for educational videos, but there are also hundreds of interactive
             math exercises that students can use to practice and master skills
             ranging from counting to calculus. Here's what an exercise looks
             like on the website:
@@ -50,7 +49,7 @@
 
             <p>
             For the past few months, the mobile team has been working to bring
-            these exercises to the iPad app.
+            these exercises to the iPad app and I got to help!
             </p>
         </section>
 
@@ -58,7 +57,7 @@
             <h2>Related videos</h2>
 
             <p>
-            Most exercises have related videos that the student can watch if they're stuck. My first project was to implement a native version of the related videos interface. We liked how the YouTube app let you drag down a video to interact with other content, so that's what I started with.
+            Most exercises have related videos that the student can watch if they're stuck. My first project was to implement a native version of the related videos interface. We liked how the YouTube app lets you drag down a video to interact with other content, so that's what I started with.
             </p>
 
             <div class="media-container">
@@ -128,7 +127,7 @@
                         </video>
                     </div>
                     <div class="media-caption">
-                        Anchor point is always in the center.
+                        Before: Anchor point is always in the center.
                         The touch leaves the view as it shrinks.
                     </div>
                 </div>
@@ -143,7 +142,7 @@
                         </video>
                     </div>
                     <div class="media-caption">
-                        Anchor point is set to the touch position.
+                        After: Anchor point is set to the touch position.
                         The view resizes around the touch, so the
                         touch never leaves the view.
                     </div>
@@ -153,9 +152,9 @@
                 <div class="pause-button" style="background-position-y: 200px"></div>
             </div>
 
-            <p>I tried implementing all of this with <a href="https://developer.apple.com/library/ios/documentation/UIKit/Reference/UIDynamicAnimator_Class/index.html#//apple_ref/occ/cl/UIDynamicAnimator">UIDynamics</a>, but ended up switching to <a href="https://github.com/facebook/pop">POP</a> because UIDynamics doesn't provide an easy way to tell when animations have quiesced (I needed to know when to pause and play the video). As a bonus, POP made it pretty easy to have the animations be interruptible.</p>
+            <p>I tried implementing all of this with <a href="https://developer.apple.com/library/ios/documentation/UIKit/Reference/UIDynamicAnimator_Class/index.html#//apple_ref/occ/cl/UIDynamicAnimator">UIDynamics</a>, but ended up switching to <a href="https://github.com/facebook/pop">POP</a> because UIDynamics doesn't provide an easy way to tell when animations have quiesced and I needed to know when to pause and play the video. As a bonus, POP made it pretty easy to have the animations be <a href="http://youtu.be/OiY1cheLpmI?t=43m35s">interruptible</a>.</p>
 
-            <p>Plot twist! Most of this didn't make it into the app. When we tested with real students, it wasn't clear that the fancy interactions were helpful. Most people didn't discover the docking, and some of the people that <em>did</em> figure it out were confused: a lot of them tried pinching the video to dismiss it. It was clear that we had a lot more polishing to do, but we weren't sure docking would actually benefit students. So we ended up shipping a simpler implementation.</p>
+            <p>Plot twist! Most of this didn't make it into the app. When we tested with real students, it wasn't clear that the fancy interactions were helpful. So we ended up shipping a simpler implementation for now.</p>
 
         </section>
 
@@ -293,7 +292,7 @@ if (initialExerciseName) {
             </div>
 
             <p>
-            I had a blast! Thanks to everyone at Khan Academy, especially the iOS team for teaching me so much:
+            I had a blast! Thanks to everyone at Khan Academy, especially the iOS team for teaching me a ton:
             <a href="https://twitter.com/omgitsmgp">Mike Parker</a>,
             <a href="https://twitter.com/andy_matuschak">Andy Matuschak</a>,
             <a href="https://twitter.com/savinola">Laura Savino</a>,
@@ -303,6 +302,10 @@ if (initialExerciseName) {
 
             <p>
             And thank you for reading this! &lt;3
+            </p>
+
+            <p>
+            If you liked this post, <a href="https://twitter.com/kasrak">follow me on Twitter!</a>
             </p>
         </section>
 
